keyclock/manifests/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.7.3
        args: ["start"]
        ports:
        - containerPort: 8080
          name: http
        - name: jgroups
          containerPort: 7800
        - name: jgroups-fd
          containerPort: 57800
        startupProbe:
          httpGet:
            path: /health/started
            port: 9000
          periodSeconds: 1
          failureThreshold: 600              
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9000
          periodSeconds: 10
          failureThreshold: 3              
        livenessProbe:
          httpGet:
            path: /health/live
            port: 9000
          periodSeconds: 10
          failureThreshold: 3              
        resources:
          requests:
            memory: 512Mi
            cpu: 250m
          limits:
            memory: 1Gi
            cpu: 1

        volumeMounts:
        - name: keycloak-data
          mountPath: /opt/keycloak/data

      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak-data
