keyclock/manifests/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
spec:
  selector:
    app: keycloak
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-management
  namespace: keycloak
spec:
  ports:
  - name: management
    port: 9000
    targetPort: 9000
  selector:
    app: keycloak
