keyclock/manifests/keycloak-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
    - name: johnkoepp-com-gateway
      namespace: infrastructure
      sectionName: https
      port: 443
  hostnames: ["idp.johnkoepp.com"]
  rules:
      - matches:
        - path:
            type: PathPrefix
            value: /
        filters:
          - type: RequestHeaderModifier
            requestHeaderModifier:
              set:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Host
                  value: idp.johnkoepp.com
                - name: X-Forwarded-Port
                  value: "443"
        backendRefs:
          - name: keycloak
            namespace: keycloak
            port: 80
        timeouts:
          request: "900s"
          backendRequest: "600s"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-redirect
  namespace: keycloak
  labels: 
    koeppster.net/aws_common_name: idp.johnkoepp.com
    koeppster.net/aws_status: waiting
spec:
  parentRefs:
    - name: johnkoepp-com-gateway
      namespace: infrastructure
      sectionName: http
      port: 80
  hostnames: ["idp.johnkoepp.com"]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
